--- a/_posts/2021-09-30-boa-release-13.md
+++ b/_posts/2021-09-30-boa-release-13.md
@@ -52,6 +52,8 @@ context.register_global_closure("addOne", 1, move |_, args, _| {
 assert_eq!(context.eval("addOne(41)")?, 42.into());
 ```
 
+To see the full capabilities of this feature, take a look at our [examples](https://github.com/boa-dev/boa/blob/master/boa/examples/closures.rs). Thanks to @HalidOdat and @jedel1043 for their work on this.
+
 ### Boa prelude
 
 This release exposes a prelude of useful things that are already imported. This should make it more ergonomic to work with.
@@ -67,8 +69,6 @@ fn main() {
 }
 ```
 
-To see the full capabilities of this feature, take a look at our [examples](https://github.com/boa-dev/boa/blob/master/boa/examples/closures.rs). Thanks to @HalidOdat and @jedel1043 for their work on this.
-
 ## Test 262
 
 Test262 is the implementation conformance test suite maintained by TC39. It's used by nearly all engines to measure how conformant they are to the specification. Boa pulls the tests in-tree and runs them against all PRs.
@@ -79,7 +79,7 @@ You can track Boa's conformance to the specification [here](https://boa-dev.gith
 
 ## Keeping up with Rust
 
-As we work on Boa Rust is changing underneath us. This means we need to make sure our code is conforming the latest standards and we're taking advantage of the best optimizations Rust can provide. In order to do this we rely on Clippy, this is Rust's in-house linter. We updated our code to [respect the latest Rust version](https://github.com/boa-dev/boa/pull/1352) and updated [formatting](https://github.com/boa-dev/boa/pull/1356). Often a nice bonus of doing this is getting performance improvements for free as Clippy gets more "smarter". Thanks to @neeldug and @RageKnify for the work in this area.
+Rust is changing underneath us. This means we need to make sure our code is conforming the latest standards and we're taking advantage of the best optimizations the language can provide. In order to do this we rely on Clippy, this is Rust's in-house linter. We updated our code to [respect the latest Rust version](https://github.com/boa-dev/boa/pull/1352) and updated [formatting](https://github.com/boa-dev/boa/pull/1356). Often a nice bonus of doing this is getting performance improvements for free as Clippy gets more "smarter". Thanks to @neeldug and @RageKnify for the work in this area.
 
 ## Keeping things in order
 
@@ -91,11 +91,10 @@ There is still on-going work to utilise a VM, this is happening [alongside](http
 
 ## Opening up the discussion
 
-As of this release Boa has begun to utilise Github's Discussions feature. You can catch more long-ranging projects here:
-https://github.com/boa-dev/boa/discussions
+As of this release Boa has begun to utilise Github's Discussions feature. You can catch more long-ranging projects [here](https://github.com/boa-dev/boa/discussions)
 
 ## Thank You
 
-Everything in this release has been such a huge effort, we want to thank all the [contributors](https://github.com/boa-dev/boa/graphs/contributors?from=2021-06-01&to=2021-09-26&type=c) in this release, whether it was features, fixes or raising bugs.
+This has been the biggest release yet, there have been many features and fixes. We want to thank all the [contributors](https://github.com/boa-dev/boa/graphs/contributors?from=2021-06-01&to=2021-09-26&type=c) in this release, whether it was features, fixes or raising bugs.
 
 If you're interested in contributing to Boa, we have some ["good first issues"](https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3A%22good+first+issue%22) and ["issues where help is wanted"](https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3A%22help+wanted%22).
