--- a/_posts/2021-09-30-boa-release-13.md
+++ b/_posts/2021-09-30-boa-release-13.md
@@ -83,7 +83,7 @@ Rust is changing underneath us. This means we need to make sure our code is conf
 
 ## Keeping things in order
 
-Previously object properties were stored using [`FXHash`](https://crates.io/crates/fxhash). Despite being very fast it didn't offer any guarantees about the order. Properties need to retain the same order they were entered. In order to achieve this we switched over to [IndexMap](https://docs.rs/indexmap/1.7.0/indexmap/). Traits in Rust make this easy as IndexMap was designed to be a drop-in replacement for other HashMap implementations by following the same Trait. Performance losses were minimal on some benchmarks and we actually made some gains in others. Thanks to @raskad for their work on this
+Previously object properties were stored using [`FxHashMap`](https://docs.rs/rustc-hash/1.1.0/rustc_hash/type.FxHashMap.html). Despite being very fast it didn't offer any guarantees about the order. Properties need to retain the same order they were entered. In order to achieve this we switched over to [IndexMap](https://docs.rs/indexmap/1.7.0/indexmap/). Traits in Rust make this easy as IndexMap was designed to be a drop-in replacement for other HashMap implementations by following the same Trait. Thanks to IndexMap offering the possibility to use alternative hashing algorithms, we could continue using the fast [`FxHasher`](https://docs.rs/rustc-hash/1.1.0/rustc_hash/struct.FxHasher.html) algorithm from rustc. Performance losses were minimal on some benchmarks and we actually made some gains in others. Thanks to @raskad for their work on this
 
 ## Re-design VM for better space efficiency
 
