--- a/_posts/2021-09-30-boa-release-13.md
+++ b/_posts/2021-09-30-boa-release-13.md
@@ -40,7 +40,7 @@ Other implemented language features include destructoring assignments, `replaceA
 
 ### Calling Rust closures from JavaScript
 
-In addition to registering Rust functions as global JavaScript functions, our API has been expanded to register Rust closures. [`register_global_closure`](https://github.com/boa-dev/boa/blob/master/boa/src/context.rs#L691) allows to capture variables in closures that can be called from javascript:
+In addition to registering Rust functions as global JavaScript functions, our API has been expanded to register Rust closures. [`register_global_closure`](https://docs.rs/Boa/0.13.0/boa/context/struct.Context.html#method.register_global_closure) allows to capture variables in closures that can be called from javascript:
 
 ```rust
 let mut context = Context::new();
