--- a/_posts/2021-09-30-boa-release-13.md
+++ b/_posts/2021-09-30-boa-release-13.md
@@ -87,7 +87,7 @@ Previously object properties were stored using [`FxHashMap`](https://docs.rs/rus
 
 ## Re-design VM for better space efficiency
 
-There is still on-going work to utilise a VM, this is happening [alongside](https://github.com/boa-dev/boa/blob/master/docs/vm.md#state-of-play) how Boa runs today. Although its not exposed yet there has been plenty of refactorings to the VM in order to make it performant. https://github.com/boa-dev/boa/pull/1361
+There is still on-going work to utilise a VM, this is happening [alongside](https://github.com/boa-dev/boa/blob/master/docs/vm.md#state-of-play) how Boa runs today. Although its not exposed yet there has been plenty of refactorings to the VM in order to make it performant.
 
 ## Opening up the discussion
 
