change master refs

--- a/_posts/2020-10-02-boa-release-10.md
+++ b/_posts/2020-10-02-boa-release-10.md
@@ -9,7 +9,7 @@ Boa also exists to serve as a Rust implementation of the EcmaScript specificatio
 
 We have a long way to go, however v0.10 has been the biggest release to date, with 138 issues closed!
 
-We have some highlights, but if you prefer to read the full changelog, you can do that [here](https://github.com/boa-dev/boa/blob/master/CHANGELOG.md)
+We have some highlights, but if you prefer to read the full changelog, you can do that [here](https://github.com/boa-dev/boa/blob/main/CHANGELOG.md)
 
 ## Test262
 
@@ -24,7 +24,7 @@ This is a new crate inside the Boa repository that can parse through all of the 
 
 Today Boa has <span class="x x-first x-last">18</span>% conformity to the specification. We'll be keeping an eye on this number over the releases. We expect to achieve around 30% by 0.11 due to some of the fixes we're adding which should pass a few thousand tests.
 
-These are run via Github Actions against PRs and for our master branch so that we can keep track of where we are and if there are regressions.
+These are run via Github Actions against PRs and for our main branch so that we can keep track of where we are and if there are regressions.
 
 ## Built-ins
 
