--- a/_posts/2022-03-15-boa-release-14.md
+++ b/_posts/2022-03-15-boa-release-14.md
@@ -58,7 +58,7 @@ specification is also a must. All this takes time, and we will need to finance d
 
 ### Can I contribute differently?
 
-If financial contribution is not your strenght, you can contribute by asking to be assigned to one of our
+If financial contribution is not your strength, you can contribute by asking to be assigned to one of our
 [open issues](https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+no%3Aassignee), and asking for mentoring if you
 don't know your way around the engine. Our [contribution guide](https://github.com/boa-dev/boa/blob/main/CONTRIBUTING.md)
 should help you here. If you are more used to working with JavaScript or frontend web development, we also
