--- a/_posts/2022-03-15-boa-release-14.md
+++ b/_posts/2022-03-15-boa-release-14.md
@@ -7,8 +7,8 @@ author: Boa Developers
 ## Summary
 
 Boa v0.14 is here! After almost 6 months of development, we are very happy to present you the newest release of the Boa
-JavaScript engine. It makes it easy to embed a JS engine in your projects, and you can even use it from webassembly. See
-the [about](/about) page for more info. Together with this release, we present you a new way to contribute to Boa.
+JavaScript engine. Boa makes it easy to embed a JS engine in your projects, and you can even use it from webassembly. See
+the [about](/about) page for more info. Together with this release, we present you: A new way to contribute to Boa, a virtual machine, usable examples and much more.
 
 Boa currently supports part of the JavaScript language. In this release, our conformance has grown from 41.01% to 48.72 %
 in the official ECMAScript Test Suite (Test262). The engine now passes 43,039 tests, coming from 33,192 in Boa 0.13
@@ -16,18 +16,31 @@ in the official ECMAScript Test Suite (Test262). The engine now passes 43,039 te
 [here](https://github.com/boa-dev/boa/blob/v0.14/CHANGELOG.md), and the full information on conformance
 [here](https://boa-dev.github.io/boa/test262/).
 
+## Boa has moved
+
+First off, some breaking changes!
+Boa is now `boa_engine` on crates.io. This should bring it in line with out other packages, and allows us to resolve the casing issue we had with Boa previously. It should just be a case of changing your dependencies in cargo.toml to the new destination. The old `Boa` crate will no longer recieve any updates.
+
+## New ECMAScript features
+
+Boa v0.14 now adds support for `AggregateError`, `Typed Arrays`, `Proxy`, `toLocaleString()`, `DataView`, `Symbol.prototype.valueOf`, `Array.prototype.at()` and [more](https://github.com/boa-dev/boa/blob/v0.14/CHANGELOG.md). There's also been serveral bug fixes and internal improvements, such as [switching to Bors](https://github.com/boa-dev/boa/pull/1684) for our CI management.
+
 ## Writing a VM
 
 The biggest change in this release has definitely been the switch of the main implementation to a Virtual Machine. The
 JavaScript code first gets parsed into AST, then compiled into op-codes, and finally executed in the VM. This adds some
-extra steps, which have reduced the performance of the engine, but on the other hand, this opens the door for many great
-features in the future (we're looking at you, async/await), and allows some nicer optimizations in the parsing and compilation
-phases in which we have already started working (such as [#1829](https://github.com/boa-dev/boa/pull/1829) and
+extra steps, which, for now, have reduced the performance of the engine. We hope to fix some of these degradations over the course of the next few releases so hang tight. The new VM opens the door for many great features in the future (we're looking at you, async/await), and allows some nicer optimizations in the parsing and compilation phases in which we have already started working (such as [#1829](https://github.com/boa-dev/boa/pull/1829) and
 [#1849](https://github.com/boa-dev/boa/pull/1849)).
 
 This move towards a VM has also brought one great new feature, generator execution ([#1790](https://github.com/boa-dev/boa/pull/1790)).
 
-# TO-DO
+## String interning
+
+@Razican has done some great work on the string interner for Boa. Interning allows many types to not contain heap-allocated strings, and just contain a `NonZeroUsize` instead, which can then be placed onto the stack.
+
+TODO: @Razican can we add more here?
+
+[Benchmarks](https://github.com/boa-dev/boa/pull/1765#issuecomment-1019474176) improved overall.
 
 ## Boa opens financial contributions
 
@@ -68,3 +81,7 @@ our Criterion benchmark comparison GitHub [action](https://github.com/boa-dev/cr
 
 We are also looking to improve the documentation of the engine, both for developers of the engine itself and for users of the
 engine. Feel free to contact us in [Discord](https://discord.gg/tUFFk9Y).
+
+### Thank You
+
+Last but certainly not least, a big **Thank You** to the countributors of Boa, especially to all the new contributors we had since the last release.
