--- a/_posts/2022-03-15-boa-release-14.md
+++ b/_posts/2022-03-15-boa-release-14.md
@@ -19,7 +19,7 @@ in the official ECMAScript Test Suite (Test262). The engine now passes 43,039 te
 ## Boa has moved
 
 First off, some breaking changes!
-Boa is now `boa_engine` on crates.io. This should bring it in line with out other packages, and allows us to resolve the casing issue we had with Boa previously. It should just be a case of changing your dependencies in cargo.toml to the new destination. The old `Boa` crate will no longer recieve any updates.
+Boa is now `boa_engine` on crates.io. This should bring it in line with our other packages, and allows us to resolve the casing issue we had with Boa previously. It should just be a case of changing your dependencies in cargo.toml to the new destination. The old `Boa` crate will no longer recieve any updates.
 
 ## New ECMAScript features
 
