--- a/_posts/2021-01-14-boa-release-11.md
+++ b/_posts/2021-01-14-boa-release-11.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+tags: post
 title: "Boa release v0.11"
 author: Boa Developers
 ---
@@ -56,7 +57,7 @@ This should offer a great insight into how you can interop Rust with JavaScript 
 
 Below are some of the more recent functions available from the Context object for you to add your own functionality.
 
-```rs
+```rust
 // Rust implementation of a function injected into the environment
 Context::register_global_function(),
 // Rust implementation of a class injected into the environment
