--- a/_posts/2021-06-07-boa-release-12.md
+++ b/_posts/2021-06-07-boa-release-12.md
@@ -1,10 +1,11 @@
 ---
 layout: post
+tags: post
 title: "Boa release v0.12"
 author: Boa Developers
 ---
 
-Boa v0.12 is here! Boa is a JavaScript parser, compiler and executor written in the Rust programming language. It makes it easy to embed a JS engine in your projects, and you can even use it from webassembly. See the [About](/about) page for more info. 
+Boa v0.12 is here! Boa is a JavaScript parser, compiler and executor written in the Rust programming language. It makes it easy to embed a JS engine in your projects, and you can even use it from webassembly. See the [About](/about) page for more info.
 
 We currently support part of the language. In this release, our conformance has grown to 33.97% of the official ECMAScript Test Suite (Test262). In this release, we have closed 19 issues and merged 69 pull requests. You can check the full list of changes [here](https://github.com/boa-dev/boa/blob/v0.12/CHANGELOG.md).
 
@@ -29,7 +30,7 @@ Boa now has support for the `Reflect` and `Set` built-in objects. This grows the
 We have also added the `@@ToStringTag` well known symbol to most of the built-in objects. You can now run the following code, for example, and get the expected result:
 
 ```javascript
-let result = (new Map())[Symbol.toStringTag];
+let result = new Map()[Symbol.toStringTag];
 
 console.log(result); // Returns "Map"
 ```
@@ -39,4 +40,3 @@ console.log(result); // Returns "Map"
 Everything in this release has been such a huge effort, we want to thank all the [contributors](https://github.com/boa-dev/boa/graphs/contributors?from=2021-01-12&to=2021-06-07&type=c) in this release, whether it was features, fixes or raising bugs.
 
 If you're interested in contributing to Boa, we have some ["good first issues"](https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3A%22good+first+issue%22) and ["issues where help is wanted"](https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3A%22help+wanted%22).
-
