- move to posts - add mermaid - use permalinks to keep same links - add npm ci step

--- a/posts/2020-07-03-boa-release-09.md
+++ b/posts/2020-07-03-boa-release-09.md
@@ -3,6 +3,7 @@ layout: post
 title: "Boa v0.9: measureme & optimisations"
 author: Boa Developers
 tags: post
+permalink: 2020/07/03/boa-release-09.html
 ---
 
 Hello World!
