--- a/posts/2021-01-14-boa-release-11.md
+++ b/posts/2021-01-14-boa-release-11.md
@@ -3,6 +3,7 @@ layout: post
 tags: post
 title: "Boa release v0.11"
 author: Boa Developers
+permalink: 2021/01/14/boa-release-11.html
 ---
 
 Boa has reached a new release. v0.11, our biggest one yet!
