--- a/posts/2021-06-07-boa-release-12.md
+++ b/posts/2021-06-07-boa-release-12.md
@@ -3,6 +3,7 @@ layout: post
 tags: post
 title: "Boa release v0.12"
 author: Boa Developers
+permalink: 2021/06/07/boa-release-12.html
 ---
 
 Boa v0.12 is here! Boa is a JavaScript parser, compiler and executor written in the Rust programming language. It makes it easy to embed a JS engine in your projects, and you can even use it from webassembly. See the [About](/about) page for more info.
