--- a/posts/2021-09-30-boa-release-13.md
+++ b/posts/2021-09-30-boa-release-13.md
@@ -3,6 +3,7 @@ layout: post
 tags: post
 title: "Boa release v0.13"
 author: Boa Developers
+permalink: 2021/09/30/boa-release-13.html
 ---
 
 Boa v0.13 is here! Boa is a JavaScript engine written in the Rust programming language. It makes it easy to embed a JS engine in your projects, and you can even use it from webassembly. See the [about](/about) page for more info.
