--- a/posts/2021-09-30-boa-release-13.md
+++ b/posts/2021-09-30-boa-release-13.md
@@ -100,3 +100,5 @@ As of this release Boa has begun to utilise Github's Discussions feature. You ca
 This has been the biggest release yet, there have been many features and fixes. We want to thank all the [contributors](https://github.com/boa-dev/boa/graphs/contributors?from=2021-06-01&to=2021-09-26&type=c) in this release, whether it was features, fixes or raising bugs.
 
 If you're interested in contributing to Boa, we have some ["good first issues"](https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3A%22good+first+issue%22) and ["issues where help is wanted"](https://github.com/boa-dev/boa/issues?q=is%3Aopen+is%3Aissue+label%3A%22help+wanted%22).
+
+test
