--- a/posts/2022-03-15-boa-release-14.md
+++ b/posts/2022-03-15-boa-release-14.md
@@ -10,20 +10,20 @@ Boa v0.14 is here! After almost 6 months of development, we are very happy to pr
 JavaScript engine. Boa makes it easy to embed a JS engine in your projects, and you can even use it from webassembly. See
 the [about](/about) page for more info. Together with this release, we present you: A new way to contribute to Boa, a virtual machine, usable examples and much more.
 
-Boa currently supports part of the JavaScript language. In this release, our conformance has grown from 41.01% to 48.72 %
-in the official ECMAScript Test Suite (Test262). The engine now passes 43,039 tests, coming from 33,192 in Boa 0.13
-(29.7% increase), and we have closed 36 issues and merged 112 pull requests. You can check the full list of changes
+Boa currently supports part of the JavaScript language. In this release, our conformance has grown from 41.01% to 49.74%
+in the official ECMAScript Test Suite (Test262). The engine now passes 43,039 43,986 tests, coming from 33,192 in Boa 0.13
+(32.5% increase), and we have closed 40 issues and merged 137 pull requests. You can check the full list of changes
 [here](https://github.com/boa-dev/boa/blob/v0.14/CHANGELOG.md), and the full information on conformance
 [here](https://boa-dev.github.io/boa/test262/).
 
 ## Boa has moved
 
 First off, some breaking changes!
-Boa is now `boa_engine` on crates.io. This should bring it in line with our other packages, and allows us to resolve the casing issue we had with Boa previously. It should just be a case of changing your dependencies in cargo.toml to the new destination. The old `Boa` crate will no longer recieve any updates.
+Boa is now `boa_engine` on crates.io. This should bring it in line with our other packages, and allows us to resolve the casing issue we had with Boa previously. It should just be a case of changing your dependencies in cargo.toml to the new destination. The old `Boa` crate will no longer receive any updates.
 
 ## New ECMAScript features
 
-Boa v0.14 now adds support for `AggregateError`, `Typed Arrays`, `Proxy`, `toLocaleString()`, `DataView`, `Symbol.prototype.valueOf`, `Array.prototype.at()` and [more](https://github.com/boa-dev/boa/blob/v0.14/CHANGELOG.md). There's also been serveral bug fixes and internal improvements, such as [switching to Bors](https://github.com/boa-dev/boa/pull/1684) for our CI management.
+Boa v0.14 now adds support for `AggregateError`, `Typed Arrays`, `Proxy`, `toLocaleString()`, `DataView`, `Symbol.prototype.valueOf`, `Array.prototype.at()` and [more](https://github.com/boa-dev/boa/blob/v0.14/CHANGELOG.md). There's also been several bug fixes and internal improvements, such as [switching to Bors](https://github.com/boa-dev/boa/pull/1684) for our CI management.
 
 ## Writing a VM
 
@@ -39,8 +39,6 @@ This move towards a VM has also brought one great new feature, generator executi
 ## String interning
 
 @Razican has done some great work on the string interner for Boa. Interning allows many types to not contain heap-allocated strings, and just contain a `NonZeroUsize` instead, which can then be placed onto the stack.
-
-TODO: @Razican can we add more here?
 
 [Benchmarks](https://github.com/boa-dev/boa/pull/1765#issuecomment-1019474176) improved overall.
 
@@ -86,4 +84,4 @@ engine. Feel free to contact us in [Discord](https://discord.gg/tUFFk9Y).
 
 ### Thank You
 
-Last but certainly not least, a big **Thank You** to the countributors of Boa, especially to all the new contributors we had since the last release.
+Last but certainly not least, a big **Thank You** to the contributors of Boa, especially to all the new contributors we had since the last release.
