--- a/posts/2022-03-15-boa-release-14.md
+++ b/posts/2022-03-15-boa-release-14.md
@@ -11,7 +11,7 @@ JavaScript engine. Boa makes it easy to embed a JS engine in your projects, and 
 the [about](/about) page for more info. Together with this release, we present you: A new way to contribute to Boa, a virtual machine, usable examples and much more.
 
 Boa currently supports part of the JavaScript language. In this release, our conformance has grown from 41.01% to 49.74%
-in the official ECMAScript Test Suite (Test262). The engine now passes 43,039 43,986 tests, coming from 33,192 in Boa 0.13
+in the official ECMAScript Test Suite (Test262). The engine now passes 43,986 tests, coming from 33,192 in Boa 0.13
 (32.5% increase), and we have closed 40 issues and merged 137 pull requests. You can check the full list of changes
 [here](https://github.com/boa-dev/boa/blob/v0.14/CHANGELOG.md), and the full information on conformance
 [here](https://boa-dev.github.io/boa/test262/).
