use transparent SVGs

--- a/posts/2022-03-15-boa-release-14.md
+++ b/posts/2022-03-15-boa-release-14.md
@@ -34,13 +34,10 @@ extra steps, which, for now, have reduced the performance of the engine. We hope
 
 This move towards a VM has also brought one great new feature, generator execution ([#1790](https://github.com/boa-dev/boa/pull/1790)).
 
-![img](/images/2022-03-15/boa_architecture.png)
+<img class="light" src="/images/2022-03-15/boa_architecture_light.svg" />
+<img class="dark" src="/images/2022-03-15/boa_architecture_dark.svg" />
 
-## String interning
-
-@Razican has done some great work on the string interner for Boa. Interning allows many types to not contain heap-allocated strings, and just contain a `NonZeroUsize` instead, which can then be placed onto the stack.
-
-[Benchmarks](https://github.com/boa-dev/boa/pull/1765#issuecomment-1019474176) improved overall.
+<br />
 
 ## Boa opens financial contributions
 
