updates and favicon

--- a/posts/2022-03-15-boa-release-14.md
+++ b/posts/2022-03-15-boa-release-14.md
@@ -19,13 +19,13 @@ in the official ECMAScript Test Suite (Test262). The engine now passes 43,986 te
 ## Boa has moved
 
 First off, some breaking changes!
-Boa is now `boa_engine` on crates.io. This should bring it in line with our other packages, and allows us to resolve the casing issue we had with Boa previously. It should just be a case of changing your dependencies in cargo.toml to the new destination. The old `Boa` crate will no longer receive any updates.
+Boa is now [`boa_engine`](https://crates.io/crates/boa_engine) on crates.io. This should bring it in line with our other packages, and allows us to resolve the [casing issue](https://github.com/boa-dev/boa/issues/230) we had with Boa previously. It should just be a case of changing your dependencies in cargo.toml to the new destination. The old `Boa` crate will no longer receive any updates.
 
 ## New ECMAScript features
 
-Boa v0.14 now adds support for `AggregateError`, `Typed Arrays`, `Proxy`, `toLocaleString()`, `DataView`, `Symbol.prototype.valueOf`, `Array.prototype.at()` and [more](https://github.com/boa-dev/boa/blob/v0.14/CHANGELOG.md). There's also been several bug fixes and internal improvements, such as [switching to Bors](https://github.com/boa-dev/boa/pull/1684) for our CI management.
+Boa v0.14 ships with support for `Object.getOwnPropertyNames`, `Object.getOwnPropertySymbols`, `Object.prototype.hasOwnProperty`, `Array.from`, `AggregateError`, `Typed Arrays`, `Proxy`, `toLocaleString()`, `Symbol.prototype.valueOf`, `Array.prototype.at()`, `String.fromCharCode`, `Object.hasOwn`, `Object.fromEntries`, `Proxy`, `Array.prototype.findLast`, `Array.prototype.findLastIndex`, `console.trace`, `String.raw( template, ...substitutions )`, and [more](https://github.com/boa-dev/boa/blob/v0.14/CHANGELOG.md). There's also been several bug fixes and internal improvements, such as [switching to Bors](https://github.com/boa-dev/boa/pull/1684) for our CI management.
 
-## Writing a VM
+## Virtual Machine
 
 The biggest change in this release has definitely been the switch of the main implementation to a Virtual Machine. The
 JavaScript code first gets parsed into AST, then compiled into op-codes, and finally executed in the VM. This adds some
@@ -33,6 +33,7 @@ extra steps, which, for now, have reduced the performance of the engine. We hope
 [#1849](https://github.com/boa-dev/boa/pull/1849)).
 
 This move towards a VM has also brought one great new feature, generator execution ([#1790](https://github.com/boa-dev/boa/pull/1790)).
+You can find out more about how to use the VM [here](https://github.com/boa-dev/boa/blob/main/docs/vm.md).
 
 <img class="light" src="/images/2022-03-15/boa_architecture_light.svg" />
 <img class="dark" src="/images/2022-03-15/boa_architecture_dark.svg" />
@@ -58,9 +59,16 @@ engine. However, they have a high variability (up to 10%), meaning that we can d
 impossible to see differences if changes are minimal (1-2%, for example). Having the infrastructure to do proper performance
 testing would require using dedicated CPUs, for example, which could be financed using the Boa Open Collective.
 
-On the development side, there are some very big projects that require deep involvement from the team. Having
-[async/await support](https://github.com/boa-dev/boa/projects/3), or implementing the
-[module system](https://github.com/boa-dev/boa/issues/64) is one of our priorities, and blocks much of our conformance.
+On the development side, there are some very big projects that require deep involvement from the team. Priorities include (not neccesarily in order):
+
+- [async/await support](https://github.com/boa-dev/boa/projects/3).
+- Better [completion records](https://github.com/boa-dev/boa/projects/5) implementation
+- Performance improvement across the board.
+- Future implementation of Shapes/Hidden Classes.
+- Being able to measure against other engines.
+- Improved conformance of the EcmaScript specification.
+- Integration with [ICU4X](https://github.com/unicode-org/icu4x) for Intl and future Temporal implementation.
+
 Implementing a [proper API](https://github.com/boa-dev/boa/discussions/1531) for Rust crates that want to embed Boa as they
 like, or a [C API](https://github.com/boa-dev/boa/issues/332) so that other software, not written in Rust, can use Boa,
 are also a priority, and implementing all the new built-in objects to achieve 100% conformance with the ECMAScript
@@ -81,4 +89,19 @@ engine. Feel free to contact us in [Discord](https://discord.gg/tUFFk9Y).
 
 ### Thank You
 
-Last but certainly not least, a big **Thank You** to the contributors of Boa, especially to all the new contributors we had since the last release.
+Last but certainly not least, a big **Thank You** to all the contributors of Boa.
+It's not often we list them but we would like to say thank you to the new contributors who joined for the last release.
+
+#### Thank you New Contributors
+
+- [@abhishekc-sharma](https://github.com/abhishekc-sharma) who made their first contribution in [#1612](https://github.com/boa-dev/boa/pull/1612)
+- [@kevinputera](https://github.com/kevinputera) who made their first contribution in [#1606](https://github.com/boa-dev/boa/pull/1606)
+- [@nrabulinski](https://github.com/nrabulinski) who made their first contribution in [#1614](https://github.com/boa-dev/boa/pull/1614)
+- [@hle0](https://github.com/hle0) who made their first contribution in [#1618](https://github.com/boa-dev/boa/pull/1618)
+- [@nekevss](https://github.com/nekevss) who made their first contribution in [#1613](https://github.com/boa-dev/boa/pull/1613)
+- [@lowr](https://github.com/lowr) who made their first contribution in [#1628](https://github.com/boa-dev/boa/pull/1628)
+- [@Nimpruda](https://github.com/Nimpruda) who made their first contribution in [#1634](https://github.com/boa-dev/boa/pull/1634)
+- [@atouchet](https://github.com/atouchet) who made their first contribution in [#1638](https://github.com/boa-dev/boa/pull/1638)
+- [@praveenbakkal](https://github.com/praveenbakkal) who made their first contribution in [#1680](https://github.com/boa-dev/boa/pull/1680)
+- [@bsinky](https://github.com/bsinky) who made their first contribution in [#1665](https://github.com/boa-dev/boa/pull/1665)
+- [@TheDoctor314](https://github.com/TheDoctor314) who made their first contribution in [#1691](https://github.com/boa-dev/boa/pull/1691)
