--- a/posts/2022-03-15-boa-release-14.md
+++ b/posts/2022-03-15-boa-release-14.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+tags: post
 title: "Boa release v0.14"
 author: Boa Developers
 ---
@@ -19,7 +20,7 @@ in the official ECMAScript Test Suite (Test262). The engine now passes 43,986 te
 ## Boa has moved
 
 First off, some breaking changes!
-Boa is now [`boa_engine`](https://crates.io/crates/boa_engine) on crates.io. This should bring it in line with our other packages, and allows us to resolve the [casing issue](https://github.com/boa-dev/boa/issues/230) we had with Boa previously. It should just be a case of changing your dependencies in cargo.toml to the new destination. The old `Boa` crate will no longer receive any updates.
+Boa is now [`boa_engine`](https://crates.io/crates/boa_engine) on crates.io. This should bring it in line with our other packages, and allows us to resolve the [casing issue](https://github.com/boa-dev/boa/issues/230) we had with Boa previously. It should just be a case of changing your dependencies in cargo.toml to the new destination. The old [`Boa`](https://crates.io/crates/boa) crate will no longer receive any updates.
 
 ## New ECMAScript features
 
@@ -61,7 +62,7 @@ testing would require using dedicated CPUs, for example, which could be financed
 
 On the development side, there are some very big projects that require deep involvement from the team. Priorities include (not neccesarily in order):
 
-- [async/await support](https://github.com/boa-dev/boa/projects/3).
+- [Async/Await support](https://github.com/boa-dev/boa/projects/3).
 - Better [completion records](https://github.com/boa-dev/boa/projects/5) implementation
 - Performance improvement across the board.
 - Future implementation of Shapes/Hidden Classes.
