Add some sections

--- a/posts/2022-06-05-boa-release-15.md
+++ b/posts/2022-06-05-boa-release-15.md
@@ -19,7 +19,54 @@ in the official ECMAScript Test Suite (Test262). The engine now passes 54,909 te
 
 ## New ECMAScript features
 
-Boa v0.15 ships with support for...
+While there are only a few big new features in this release, there are a lot of fixes for existing features that should enable many more JavaScript programs to execute correctly. For a detailed list checkout the [changelog](https://github.com/boa-dev/boa/blob/v0.15/CHANGELOG.md).
+
+### Support for Classes
+
+With this new release boa ships with support for ECMAScript Classes. While not all features are implemented, most basic functionality should work as expected.
+
+```javascript
+class Rectangle {
+  constructor(height, width) {
+    this.height = height;
+    this.width = width;
+  }
+
+  calcArea() {
+    return this.height * this.width;
+  }
+
+  get area() {
+    return this.calcArea();
+  }
+}
+
+let r = new Rectangle(2, 4)
+r.calcArea() // 8
+```
+
+### Support for `eval()` and `Function()`
+
+While especially `eval()` is one of the less popular JavScript features, many tests in the ECMAScript Test Suite use it. For a better representation of passing tests and to fully comply with the specification we have implemented it and the similar `Function()` constructor. We would like to echo the mdn docs and point out to [Never use eval()!](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/eval#never_use_eval!)
+
+```javascript
+eval('console.log("Never use eval()!")');
+
+let f = Function('arg', 'console.log("This is also a very " + arg + " idea!")');
+f("bad");
+```
+
+## Regaining Performance
+
+After moving from an AST based execution to our Virtual Machine we observed performance losses in some of our benchmarks. We found out that the root-cause of these losses was a single `format!()` call in the hot-path of the VM. Our assumption was that the formatting logic would be optimized out by rustc or llvm, because it was used as an argument to an empty (feature-gated) function. After replacing the `format!()` call with a `&'static str` the expected optimization took place and we where back to previous performance levels. For more details check out [#1973](https://github.com/boa-dev/boa/pull/1973) for the changes and some discussion about this issue. Thanks to @pdogr for finding the issue and contributing a fix.
+
+## Starting work on Internationalization
+
+ECMAScript specifies an Internationalization API trough the `Intl` global object. We have started implementing many internal functions and structures to provide the `Intl` object in boa. To take advantage of existing work in this space we have started integration the [ICU4X Project](https://github.com/unicode-org/icu4x) into boa. Thanks to @NorbertGarfield and @jedel1043 for their continued work on this topic.
+
+## Rust Wrappers for Javascript Objects
+
+We have started the implementation of wrappers around built-in Javascript objects like `Array`. These Rust types make it easy to work with Javascript objects in Rust and provide a type safe abstraction around them. Many of these wrappers are not implemented yet and may be a good place to start contributing to boa. If you are interested, check out the [tracking issue](https://github.com/boa-dev/boa/issues/2098).
 
 ## How can you contribute to Boa?
 
@@ -43,6 +90,10 @@ Last but certainly not least, a big **Thank You** to
 release. We would like to particularly thank our new contributors:
 
 - [@lupd](https://github.com/lupd) who made their first contribution in [#1979](https://github.com/boa-dev/boa/pull/1979)
--
--
--
+- [@NorbertGarfield](https://github.com/NorbertGarfield) who made their first contribution in [#1963](https://github.com/boa-dev/boa/pull/1963)
+- [@pdogr](https://github.com/pdogr) who made their first contribution in [#1968](https://github.com/boa-dev/boa/pull/1968)
+- [@kilotaras](https://github.com/kilotaras) who made their first contribution in [#1959](https://github.com/boa-dev/boa/pull/1959)
+- [@tsutton](https://github.com/tsutton) who made their first contribution in [#1999](https://github.com/boa-dev/boa/pull/1999)
+- [@manthanabc](https://github.com/manthanabc) who made their first contribution in [#1957](https://github.com/boa-dev/boa/pull/1957)
+- [@lastmjs](https://github.com/lastmjs) who made their first contribution in [#1990](https://github.com/boa-dev/boa/pull/1990)
+- [@YXL76](https://github.com/YXL76) who made their first contribution in [#2042](https://github.com/boa-dev/boa/pull/2042)
