--- a/posts/2022-06-05-boa-release-15.md
+++ b/posts/2022-06-05-boa-release-15.md
@@ -75,7 +75,7 @@ some discussion about this issue. Thanks to @pdogr for finding the issue and con
 
 ECMAScript specifies an Internationalization API trough the `Intl` global object. We have started implementing many internal
 functions and structures to provide the `Intl` object in boa. To take advantage of existing work in this space we have started
-integration the [ICU4X Project](https://github.com/unicode-org/icu4x) into boa. Thanks to @NorbertGarfield and @jedel1043 for
+integrating the [ICU4X library](https://github.com/unicode-org/icu4x) into boa. Thanks to @NorbertGarfield and @jedel1043 for
 their continued work on this topic.
 
 ## Rust Wrappers for Javascript Objects
