--- a/posts/2022-06-05-boa-release-15.md
+++ b/posts/2022-06-05-boa-release-15.md
@@ -73,7 +73,7 @@ some discussion about this issue. Thanks to @pdogr for finding the issue and con
 
 ## Starting work on Internationalization
 
-ECMAScript specifies an Internationalization API trough the `Intl` global object. We have started implementing many internal
+ECMAScript specifies an Internationalization API through the `Intl` global object. We have started implementing many internal
 functions and structures to provide the `Intl` object in boa. To take advantage of existing work in this space we have started
 integrating the [ICU4X library](https://github.com/unicode-org/icu4x) into boa. Thanks to @NorbertGarfield and @jedel1043 for
 their continued work on this topic.
