--- a/posts/2022-06-05-boa-release-15.md
+++ b/posts/2022-06-05-boa-release-15.md
@@ -50,7 +50,7 @@ r.calcArea(); // 8
 
 ### Support for `eval()` and `Function()`
 
-While especially `eval()` is one of the less popular JavScript features, many tests in the ECMAScript Test Suite use it. For a
+While `eval()` is one of the less popular Javascript features, many tests in the ECMAScript Test Suite use it. For a
 better representation of passing tests and to fully comply with the specification we have implemented it and the similar
 `Function()` constructor. We would like to echo the mdn docs and point out to
 [Never use eval()!](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/eval#never_use_eval!)
