--- a/posts/2022-06-05-boa-release-15.md
+++ b/posts/2022-06-05-boa-release-15.md
@@ -8,7 +8,7 @@ author: Boa Developers
 ## Summary
 
 Boa v0.15 is now available! After around 2.5 months of development, we are very happy to present you the newest release of the
-Boa JavaScript engine. Boa makes it easy to embed a JS engine in your projects, and you can even use it from webassembly. See
+Boa JavaScript engine. Boa makes it easy to embed a JS engine in your projects, and you can even use it from WebAssembly. See
 the [about](/about) page for more info.
 
 Boa currently supports part of the JavaScript language. In this release, our conformance has grown from 49.74% to 62.33%
