--- a/posts/2022-06-05-boa-release-15.md
+++ b/posts/2022-06-05-boa-release-15.md
@@ -67,7 +67,7 @@ f("bad");
 After moving from an AST based execution to our Virtual Machine we observed performance losses in some of our benchmarks. We
 found out that the root-cause of these losses was a single `format!()` call in the hot-path of the VM. Our assumption was that
 the formatting logic would be optimized out by rustc or llvm, because it was used as an argument to an empty (feature-gated)
-function. After replacing the `format!()` call with a `&'static str` the expected optimization took place and we where back to
+function. After replacing the `format!()` call with a `&'static str` the expected optimization took place and we were back to
 previous performance levels. For more details check out [#1973](https://github.com/boa-dev/boa/pull/1973) for the changes and
 some discussion about this issue. Thanks to @pdogr for finding the issue and contributing a fix.
 
