--- a/posts/2022-06-05-boa-release-15.md
+++ b/posts/2022-06-05-boa-release-15.md
@@ -87,8 +87,8 @@ implemented yet and may be a good place to start contributing to boa. If you are
 
 ## How can you contribute to Boa?
 
-In March, boa opened financial contributions in its [OpenCollective page](https://opencollective.com/boa). Since then, we have
-to thank Demergent Labs, a company using Boa in the Internet Computer, and that has decided to sponsor us, and to Clemens
+In March, boa opened financial contributions on its [OpenCollective page](https://opencollective.com/boa). Since then, we have
+to thank Demergent Labs, a company using Boa in the Internet Computer that has decided to sponsor us, and Clemens
 Koza, who is our first backer! We are already thinking on how we will use these contributions to improve how we develop Boa.
 
 If financial contribution is not your strength, you can contribute by asking to be assigned to one of our
